fixed overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@ $side-nav-width: 250px;
 body {
   overflow-x: hidden;
   font-family: "Poppins,arial";
+  width: 100%;
+  overflow-x: hidden;
 }
 .shadow {
   box-shadow: 0 -11.6px 113.6px -54px rgba(0, 0, 0, 0.021),
